@@ -20,20 +20,20 @@ public class SkyMineAdminLookup implements Command<SkyMines> {
 
 	@Override
 	public void execute(@Nonnull SkyMines plugin, @Nonnull Sender sender, @Nonnull ArgumentList args) {
-		Optional<UUID> uuid = UUIDs.fromName(args.get(0));
+		Optional<UUID> uuid = UUIDs.fromName(args.getFirst());
 		if (uuid.isEmpty()) {
-			Messages.FAILURE_NO_PLAYER_FOUND.replace("{player}", args.get(0)).send(sender);
+			Messages.FAILURE_NO_PLAYER_FOUND.replace("{player}", args.getFirst()).send(sender);
 			return;
 		}
 
 		List<SkyMine> skyMines = plugin.getSkyMineManager().getSkyMines(uuid.get());
 		if (skyMines.isEmpty()) {
-			Messages.FAILURE_NO_SKYMINES_FOUND.replace("{player}", args.get(0)).send(sender);
+			Messages.FAILURE_NO_SKYMINES_FOUND.replace("{player}", args.getFirst()).send(sender);
 			return;
 		}
 
 		if (!Messages.LOOKUP_SKYMINES_TOP_MESSAGE.toText().isEmpty()) {
-			Messages.LOOKUP_SKYMINES_TOP_MESSAGE.replace("{player}", args.get(0)).send(sender);
+			Messages.LOOKUP_SKYMINES_TOP_MESSAGE.replace("{player}", args.getFirst()).send(sender);
 		}
 		for (int i=1; i<=skyMines.size(); i++) {
 			Location location = skyMines.get(i - 1).getHome();
@@ -46,7 +46,7 @@ public class SkyMineAdminLookup implements Command<SkyMines> {
 					.send(sender);
 		}
 		if (!Messages.LOOKUP_SKYMINES_BOTTOM_MESSAGE.toText().isEmpty()) {
-			Messages.LOOKUP_SKYMINES_BOTTOM_MESSAGE.replace("{player}", args.get(0)).send(sender);
+			Messages.LOOKUP_SKYMINES_BOTTOM_MESSAGE.replace("{player}", args.getFirst()).send(sender);
 		}
 	}
 
